--- a/app/globals.css
+++ b/app/globals.css
@@ -74,4 +74,20 @@
     --success: var(--sea-green-500);
     --error: var(--old-rose-800);
   }
+
+  @keyframes moveArrow {
+    0% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  .animate-arrow {
+    animation: moveArrow 500ms;
+  }
 }
